--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,5 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <script src="/js/template.js"></script>
+  <a style="text-align:center; color:#afafaf; display:block;" href="https://infinite-fortress-59085.herokuapp.com/">Bekijk deze site op Heroku!</a>
   </body>
 </html>
